# mapped-willow-mapping

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.config/: common.props
.devcontainer/: README.md  devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml  pull_request_assignment.yml  renovate.json
.github/workflows/: Ontology_Mapper.yml  Ontology_Mappings.yml  Ontology_Mappings_Diagnostics.yml  Ontology_Mappings_Main.yml  Ontology_Mappings_PR.yml  Upload_Mappings.yml  Version_Bump.yml
Ontologies.Mappings/: Ontologies.Mappings.sln
Ontologies.Mappings/.config/: common.props  common.targets
Ontologies.Mappings/mapper/: main.py
Ontologies.Mappings/src/: FileOntologyMappingLoader.cs  FillPropertyComparer.cs  IOntologyMappingLoader.cs  IOntologyMappingManager.cs  MappedHttpOntologyMappingLoader.cs  MappedOntologyMappingLoader.cs  MultifileOntologyMappingLoader.cs  ObjectTransformationComparer.cs  ObjectTransformationMatch.cs  Ontologies.Mappings.csproj  OntologyMapping.cs  OntologyMappingManager.cs  PropertyProjectionComparer.cs  stylecop.json
Ontologies.Mappings/test/: BrickRecMappingValidationTests.cs  LoaderType.cs  MappedHttpMappingValidationTests.cs  MappedMappingValidationTests.cs  MultipleFileMappingValidationTests.cs  Ontologies.Mappings.Test.csproj  OntologyMappingManagerTests.cs  Tools.cs  WillowMappingValidationTests.cs
Ontology.Mappings/: Ontology.Mappings.sln  README.md
Ontology.Mappings/src/: FileOntologyMappingLoader.cs  IOntologyMappingLoader.cs  IOntologyMappingManager.cs  (+6 more)
data/: Mapped2Willow.json  Willow2Mapped.json  mapped_v1_dtdlv2_Willow.json  willow_v1_dtdlv2_mapped.json
scripts/: generate_mappings.py  reverse_mappings.py  sort_mappings.py
(+30 files in other folders)
