[tool.poetry]
name = "mapped-willow-mapping"
version = "0.1.0"
description = ""
authors = ["Connor Cantrell <connor@mapped.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
requests = "^2.31.0"
ontology-mapper = {version = "^0.2.2", source = "fury"}


[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/mapped/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
