[tool.poetry]
name = "mapped-willow-mapping"
version = "0.1.0"
description = ""
authors = ["Connor Cantrell <connor@mapped.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
ontology-mapper = {version = "^0.4.2", source = "fury"}

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/mapped/"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
